# LiCunXu

./: .env.example  .gitignore  README.md  cli.py  main.py  pyproject.toml
api/: __init__.py  routes.py  visualization.py
books/: splited_empire.txt
config/: llm_client.py  settings.py
data/seed/: seed_data.py
graph/: __init__.py  connection.py  crud.py  schema.py  seed_loader.py
ingestion/: __init__.py  extractor.py  pipeline.py  text_processor.py
models/: __init__.py  entities.py
rag/: __init__.py  engine.py
scripts/: cleanup_polluted_nodes.py  llm_batch_cleanup.py
static/: index.html
